refactor: update ChecklistApplicationService to auto id